<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InstanceStateActivity">

  <androidx.appcompat.widget.Toolbar
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="?attr/colorPrimary"
      android:id="@+id/app_toolbar"/>

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/desc_instance_state"
      android:maxLines="4"
      android:textSize="20sp"
      android:layout_margin="10dp"/>

  <TextView
      android:id="@+id/text_view_count"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"/>

  <Button
      android:id="@+id/button_plus"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/plus_button"
      android:layout_margin="10dp"/>

  <EditText
      android:id="@+id/edit_instance_state"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/edit_hint"
      android:layout_margin="10dp"/>
</LinearLayout>
