<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recycleview.ListItemActivity">

  <androidx.appcompat.widget.Toolbar
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="?attr/colorPrimary"
      android:id="@+id/app_toolbar"/>

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="0dp"
      android:layout_weight="1"
      tools:src="@tools:sample/avatars[0]"
      android:id="@+id/imageViewDetail"
      android:layout_gravity="center"
      app:srcCompat="@mipmap/ic_launcher"/>

  <TextView
      android:text="@string/text_view"
      android:layout_width="wrap_content"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:id="@+id/textViewDetail"
      android:layout_gravity="center"/>

  <Button
      android:text="@string/go_back"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/buttonDetail"
      android:layout_gravity="center"
      android:layout_marginBottom="10dp"/>
</LinearLayout>