<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recycleview.RecycleViewBasicActivity">

  <androidx.appcompat.widget.Toolbar
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="?attr/colorPrimary"
      android:id="@+id/app_toolbar"/>

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recyclerView"
      android:scrollbars="vertical"
      android:layout_weight="1"
      android:layout_width="match_parent"
      android:layout_height="0dp"/>

</LinearLayout>
